# aurora-cli-wallet

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: publish-binaries.yml  release.yml
src/: account.rs  commands.rs  config.rs  error.rs  main.rs  render.rs
src/horizon/: account.rs  claimable_balance.rs  effect.rs  ledger.rs  mod.rs  operation.rs  payment.rs  server.rs  trade.rs  transaction.rs
