[package]
name = "aurora"
version = "0.1.0"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.31"
atty = "0.2.14"
confy = "0.4.0"
convey = "0.2.0"
clap = "2.33.1"
stellar-base = "0.5.0"
stellar-horizon = "0.6.0-beta.4"
structopt = "0.3.0"
thiserror = "1.0.20"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
tokio = { version = "1.0.2", features = ["full"] }
tokio-stream = "0.1.2"
url = "2.1.1"